--- a/brothers/public/index.html
+++ b/brothers/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Grow Up With Your Business"
+      content="GROW UP YOUR BUSINESS"
     />
-    <link rel="apple-touch-icon" href="./MINI-U.jpg" />
+    <link rel="apple-touch-icon" href="./miniugrowUp.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
