--- a/brothers/public/index.html
+++ b/brothers/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MINIU</title>
+    <meta name="description" content="ابدا معنا بتطوير مشروعك مع قائمة رقمية لمشروعك! ندعوكم للاطلاع على نماذج للقوائم واختيار ما هو مناسب لكم. مشروعك ليس في الانترنت بعد ؟ اجا الوقت تتقدم فيه !"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
